agrega la seccion de retratos y paisajes, pendiente agregar animacion a los elementos img

--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
                 </picture>
             </article>
             <article>
+                <div class="cont-img">
+                    <picture>
+                        <img class="paisajes"src="src/img/plaza-barrios-noche.jpg">
+                    </picture>
+                    <picture>
+                        <img class="retratos" src="src/img/catedral-metropolitana.jpg">
+                    </picture>
+                </div>
+            </article>
+            <article>
                 
             </article>
         </section>
