crear botones de social-network y utilizando la libreria font awesome

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="pagina para fotografo">
     <title>Inicio | Foto</title>
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
+    <!--font awesome-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
     <header>
@@ -28,7 +30,7 @@
             <article>
                 <div class="cont-img">
                     <picture>
-                        <img class="paisajes"src="src/img/plaza-barrios-noche.jpg">
+                        <img class="paisajes" src="src/img/plaza-barrios-noche.jpg">
                     </picture>
                     <picture>
                         <img class="retratos" src="src/img/catedral-metropolitana.jpg">
@@ -55,15 +57,24 @@
             </div>
             <div class="foot-col3">
                 <h1>Redes Sociales</h1>
-                <ul>
-                    <li>Facebook</li>
-                    <li>twitter</li>
-                    <li>Instagram</li>
-                </ul>
+                <div class="social-network">
+                    <a class="btn-facebook" href="#">
+                        <i class="fab fa-facebook "></i>
+                        Facebook
+                    </a>
+                    <a class="btn-twitter" href="">
+                        <i class="fab fa-twitter"></i>
+                        Twitter
+                    </a>
+                    <a class="btn-insta" href="">
+                        <i class="fab fa-instagram"></i>
+                        Instagram
+                    </a>
+                </div>
             </div>
             <div class="foot-col4">
                 <h1>Derechos</h1>
-                <p>Urrutia, Osmins ©</p>
+                <p style="font-size:1.5em;"  >Urrutia, Osmins <i class="far fa-copyright"></i></p>
             </div>
         </div>
     </footer>
