finalizar el index.html, iniciar secciones siguientes Galerias(Pendiente)

--- a/src/vistas/retratos.html
+++ b/src/vistas/retratos.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
     <meta name="author" content="Osmin Urrutia">
     <meta name="description" content="pagina para fotografo">
-    <title>Inicio | FotoSalvadorian</title>
+    <title>Retrato | FotoSalvadorian</title>
     <!--mis propios Estilos-->
-    <link rel="stylesheet" type="text/css" href="css/estilos.css">
+    <link rel="stylesheet" type="text/css" href="../../css/estilos.css">
     <!--font awesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
@@ -19,35 +19,12 @@
         <nav class="navbar">
             <h1>Comenzando con la fotografia</h1>
             <a href="#">Home</a>
-            <a href="src/vistas/paisajes.html">Paisajes</a>
-            <a href="src/vistas/retratos.html">Retratos</a>
+            <a href="../src/vistas/paisajes.html">Paisajes</a>
+            <a href="../src/vistas/retratos.html">Retratos</a>
         </nav>
     </header>
     <!--header finalizado-->
-    <div class="contenido">
-        <section>
-            <article>
-                <picture class="background">
-                    <img class="banner" srcset="src/img/lago-banner.jpg">
-                </picture>
-            </article>
-            <article>
-                <div class="cont-img">
-                    <picture>
-                        <source srcset="src/img/salvador-del-mundo.jpg" media="(min-width: 900px)">
-                        <source srcset="src/img/lago-coate.jpg" media="(max-width: 100%)">
-                        <img class="img-paisajes" srcset="src/img/lago-coate.jpg">
-                    </picture>
-                    <picture>
-                        <img class="img-retratos" srcset="src/img/catedral-metropolitana.jpg">
-                    </picture>
-                </div>
-            </article>
-            <article>
-
-            </article>
-        </section>
-    </div>
+    <!--Footer-->
 
     <footer>
         <div class="footer">
