crear galeria con resposive desing

--- a/src/vistas/paisajes.html
+++ b/src/vistas/paisajes.html
@@ -20,7 +20,7 @@
         <header>
             <nav class="navbar">
                 <h1>Comenzando con la fotografia</h1>
-                <a href="#">Home</a>
+                <a href="../../index.html">Home</a>
                 <a href="../src/vistas/paisajes.html">Paisajes</a>
                 <a href="../src/vistas/retratos.html">Retratos</a>
             </nav>
@@ -31,12 +31,27 @@
         <section>
             <article>
                 <div class="galeria">
-                    <div class="columnas">
-                        <img src="../img" alt="">
-                        <img src="../img" alt="">
-                        <img src="../img" alt="">
-                        <img src="../img" alt="">
-                    </div>
+                    <picture>
+                        <img  class="img-respo" src="../img/playas-bellas-sv.jpg" alt="">
+                    </picture>
+                    <picture>
+                        <img  class="img-respo" src="../img/lago-coate.jpg" alt="">
+                    </picture>
+                    <picture>
+                        <img  class="img-respo" src="../img/salvador-del-mundo.jpg" alt="">
+                    </picture>
+                    <picture>
+                        <img  class="img-respo" src="../img/c8a.jpg" alt="">
+                    </picture>
+                    <picture>
+                        <img class="img-respo" src="../img/marca-pais-el-salvador.jpg" alt="">
+                    </picture>
+                    <picture>
+                        <img class="img-respo" src="../img/camino-piedras.jpg" alt="">
+                    </picture>
+
+                        
+                      
                 </div>
             </article>
         </section>
