finalizar contenedor y pruebas de resposive para moviles

--- a/index.html
+++ b/index.html
@@ -15,19 +15,20 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar">
-            <h1>Comenzando con la fotografia</h1>
-            <a href="#">Home</a>
-            <a href="src/vistas/paisajes.html">Paisajes</a>
-            <a href="src/vistas/retratos.html">Retratos</a>
-        </nav>
-    </header>
-    <!--header finalizado-->
-    <div class="contenido">
+    <div class="contenedor">
+        <header>
+            <nav class="navbar">
+                <h1 style="text-align: center">Comenzando con la fotografia</h1>
+                <a href="#">Home</a>
+                <a href="src/vistas/paisajes.html">Paisajes</a>
+                <a href="src/vistas/retratos.html">Retratos</a>
+            </nav>
+        </header>
+        <!--header finalizado-->
+
         <section>
             <article>
-                <picture class="background">
+                <picture>
                     <img class="banner" srcset="src/img/lago-banner.jpg">
                 </picture>
             </article>
@@ -41,49 +42,50 @@
                     <picture>
                         <img class="img-retratos" srcset="src/img/catedral-metropolitana.jpg">
                     </picture>
-                </div>
+
             </article>
             <article>
 
             </article>
         </section>
-    </div>
 
-    <footer>
-        <div class="footer">
-            <div class="foot-col1">
-                <h1>Contacto</h1>
-                <p>osmin@gmail.com</p>
-                <p><strong>Direcci&oacute;n:</strong> Ave Alejandro Merlos, B° Centro,Jiquilisco</b></p>
-                <p><strong>tel:</strong>>5555-5555</p>
-            </div>
-            <div class="foot-col2">
-                <h1>T&eacuteminos</h1>
-                <p>El contenido mostrado es de uso Reservado</p>
-            </div>
-            <div class="foot-col3">
-                <h1>Redes Sociales</h1>
-                <div class="social-network">
-                    <a class="btn-facebook" href="#">
-                        <i class="fab fa-facebook "></i>
-                        Facebook
-                    </a>
-                    <a class="btn-twitter" href="">
-                        <i class="fab fa-twitter"></i>
-                        Twitter
-                    </a>
-                    <a class="btn-insta" href="">
-                        <i class="fab fa-instagram"></i>
-                        Instagram
-                    </a>
+
+        <footer>
+            <div class="footer">
+                <div class="foot-col1">
+                    <h1>Contacto</h1>
+                    <p>osmin@gmail.com</p>
+                    <p><strong>Direcci&oacute;n:</strong> Ave Alejandro Merlos, B° Centro,Jiquilisco</b></p>
+                    <p><strong>tel:</strong>>5555-5555</p>
+                </div>
+                <div class="foot-col2">
+                    <h1>T&eacuteminos</h1>
+                    <p>El contenido mostrado es de uso Reservado</p>
+                </div>
+                <div class="foot-col3">
+                    <h1>Redes Sociales</h1>
+                    <div class="social-network">
+                        <a class="btn-facebook" href="#">
+                            <i class="fab fa-facebook "></i>
+                            Facebook
+                        </a>
+                        <a class="btn-twitter" href="">
+                            <i class="fab fa-twitter"></i>
+                            Twitter
+                        </a>
+                        <a class="btn-insta" href="">
+                            <i class="fab fa-instagram"></i>
+                            Instagram
+                        </a>
+                    </div>
+                </div>
+                <div class="foot-col4">
+                    <h1>Derechos</h1>
+                    <p style="font-size:1.5em;">Urrutia, Osmins <i class="far fa-copyright"></i> 2018</p>
                 </div>
             </div>
-            <div class="foot-col4">
-                <h1>Derechos</h1>
-                <p style="font-size:1.5em;">Urrutia, Osmins <i class="far fa-copyright"></i> 2018</p>
-            </div>
+        </footer>
         </div>
-    </footer>
 </body>
 
 </html>
