--- a/src/vistas/paisajes.html
+++ b/src/vistas/paisajes.html
@@ -19,10 +19,10 @@
     <div class="contenedor">
         <header>
             <nav class="navbar">
-                <h1>Comenzando con la fotografia</h1>
+                <h1 style="text-align: center">Comenzando con la fotografia</h1>
                 <a href="../../index.html">Home</a>
-                <a href="../src/vistas/paisajes.html">Paisajes</a>
-                <a href="../src/vistas/retratos.html">Retratos</a>
+                <a href="../vistas/paisajes.html">Paisajes</a>
+                <a href="../vistas/retratos.html">Retratos</a>
             </nav>
         </header>
         <!--header finalizado-->
