--- a/src/vistas/retratos.html
+++ b/src/vistas/retratos.html
@@ -19,10 +19,10 @@
         <div class="contenedor">
             <header>
                 <nav class="navbar">
-                    <h1>Comenzando con la fotografia</h1>
+                    <h1 style="text-align: center">Comenzando con la fotografia</h1>
                     <a href="../../index.html">Home</a>
-                    <a href="../src/vistas/paisajes.html">Paisajes</a>
-                    <a href="../src/vistas/retratos.html">Retratos</a>
+                    <a href="../vistas/paisajes.html">Paisajes</a>
+                    <a href="../vistas/retratos.html">Retratos</a>
                 </nav>
             </header>
             <!--header finalizado-->
@@ -32,22 +32,22 @@
                 <article>
                     <div class="galeria">
                         <picture>
-                            <img  class="img-respo" src="../img/playas-bellas-sv.jpg" alt="">
+                            <img  class="img-respo" src="../img/foto-retrato.jpg" alt="Retrato">
                         </picture>
                         <picture>
-                            <img  class="img-respo" src="../img/lago-coate.jpg" alt="">
+                            <img  class="img-respo" src="../img/foto-retrato.jpg" alt="Retrado">
                         </picture>
                         <picture>
-                            <img  class="img-respo" src="../img/salvador-del-mundo.jpg" alt="">
+                            <img  class="img-respo" src="../img/foto-retrato.jpg" alt="Retrato">
                         </picture>
                         <picture>
-                            <img  class="img-respo" src="../img/c8a.jpg" alt="">
+                            <img  class="img-respo" src="../img/foto-retrato.jpg" alt="Retrato">
                         </picture>
                         <picture>
-                            <img class="img-respo" src="../img/marca-pais-el-salvador.jpg" alt="">
+                            <img class="img-respo" src="../img/foto-retrato.jpg" alt="Retrato">
                         </picture>
                         <picture>
-                            <img class="img-respo" src="../img/camino-piedras.jpg" alt="">
+                            <img class="img-respo" src="../img/foto-retrato.jpg" alt="Retrato">
                         </picture>
     
                             
