--- a/src/vistas/paisajes.html
+++ b/src/vistas/paisajes.html
@@ -61,7 +61,7 @@
             <div class="footer">
                 <div class="foot-col1">
                     <h1>Contacto</h1>
-                    <p>osmin@gmail.com</p>
+                    <a  class="correo" href="mailto:osmin@gmail.com">Enviar Correo</a>
                     <p><strong>Direcci&oacute;n:</strong> Ave Alejandro Merlos, B° Centro,Jiquilisco</b></p>
                     <p><strong>tel:</strong>>5555-5555</p>
                 </div>
@@ -72,15 +72,15 @@
                 <div class="foot-col3">
                     <h1>Redes Sociales</h1>
                     <div class="social-network">
-                        <a class="btn-facebook" href="#">
+                        <a class="btn-facebook" target="_blanck" href="https://www.facebook.com/Urrutia.o">
                             <i class="fab fa-facebook "></i>
                             Facebook
                         </a>
-                        <a class="btn-twitter" href="">
+                        <a class="btn-twitter" target="_blanck" href="https://twitter.com/MaterializeCSS?lang=es">
                             <i class="fab fa-twitter"></i>
                             Twitter
                         </a>
-                        <a class="btn-insta" href="">
+                        <a class="btn-insta" target="_blanck" href="https://www.instagram.com/osmin.urrutia/?hl=es-la">
                             <i class="fab fa-instagram"></i>
                             Instagram
                         </a>
